Make more squares and change pallet tone

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
     <script src="/bower_components/animejs/anime.min.js"> </script>
     <script src="/js/index.js"> </script>
   </body>
