--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <section> </section>
     <section> </section>
     <script src="/bower_components/animejs/anime.min.js"> </script>
+    <script src="/js/letters.js"> </script>
     <script src="/js/index.js"> </script>
   </body>
 </html>
