--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
     <section> </section>
     <section> </section>
     <section> </section>
+    <br/>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
     <script src="/bower_components/animejs/anime.min.js"> </script>
     <script src="/js/letters.js"> </script>
     <script src="/js/index.js"> </script>
