--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <section> </section>
+    <section> </section>
+    <section> </section>
+    <section> </section>
     <script src="/bower_components/animejs/anime.min.js"> </script>
     <script src="/js/letters.js"> </script>
     <script src="/js/index.js"> </script>
