--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
 
   <body>
-    <script src="./bower_components/animejs/anime.min.js"> </script>
-    <script src="./js/letters.js"> </script>
-    <script src="./js/index.js"> </script>
+    <script src="/bower_components/animejs/anime.min.js"> </script>
+    <script src="/js/letters.js"> </script>
+    <script src="/js/index.js"> </script>
   </body>
 </html>
 
