--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title> Jekri Orlina </title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <meta property="og:title" content="Jekku. The Derp Programmer."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://jekku.github.io"/>
@@ -11,9 +11,9 @@
   </head>
 
   <body>
-    <script src="/bower_components/animejs/anime.min.js"> </script>
-    <script src="/js/letters.js"> </script>
-    <script src="/js/index.js"> </script>
+    <script src="bower_components/animejs/anime.min.js"> </script>
+    <script src="js/letters.js"> </script>
+    <script src="js/index.js"> </script>
   </body>
 </html>
 
